# atombot

./: .gitignore  LICENSE  README.md  linecheck.sh  pyproject.toml
atombot/agent/: core.py  memory.py  skills.py  tools.py
atombot/channels/: __init__.py  telegram.py
atombot/cli/: cli.py
atombot/prompts/: AGENTS.md  MEMORY.md
atombot/provider/: __init__.py  provider.py
atombot/scheduler/: cron.py
atombot/skills/cron/: SKILL.md
atombot/skills/memory/: SKILL.md
